Refactoring getFields and getMethods  methods in  HaxePsiClass implementation for better readability